[gd_scene load_steps=7 format=3 uid="uid://cte8f8n4upcas"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_u65ec"]
[ext_resource type="FontFile" uid="uid://cgtl4f4f8l0um" path="res://Assets/VT323-Regular.ttf" id="2_hxcxc"]
[ext_resource type="AudioStream" uid="uid://cb7fiqilphjs3" path="res://Assets/Sounds/Win sound.wav" id="3_dpxl4"]
[ext_resource type="AudioStream" uid="uid://dth05gh6b3d5t" path="res://Assets/Sounds/lose.wav" id="3_md5uu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss4as"]
bg_color = Color(0.996078, 0, 0.431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tgnbp"]
bg_color = Color(0.337255, 0.670588, 0.584314, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_u65ec")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_hxcxc")
theme_override_font_sizes/font_size = 32
text = "Lives: 3"

[node name="GameLostContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameLostContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ss4as")

[node name="VBoxContainer" type="VBoxContainer" parent="GameLostContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE LOST
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLostButton" type="Button" parent="GameLostContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART GAME"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tgnbp")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "YOU HAVE WON THE LEVEL
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "NEXT LEVEL PLEASE"

[node name="LoseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_md5uu")
volume_db = 7.924

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dpxl4")

[connection signal="pressed" from="GameLostContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_game_lost_button_pressed"]
